Style : Fix overflow esp_section_1

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+    cursor: url('sym59.cur'), pointer;
+}
+
+a:link,
+button:hover,
+.button:hover input {
+    cursor: url('sym421.cur'), pointer;
+}
+
 :root {
     --font-title: 'Domine', serif;
     --font-content: 'Akshar', sans-serif;
@@ -680,10 +690,10 @@ input#contact_form_button:hover {
         margin: 0;
     }
     #esp_section_1 {
+        overflow: visible;
         grid-area: 1 / 1 / 2 / 2;
     }
     #esp_section_2 {
-        overflow: visible;
         grid-area: 2 / 1 / 3 / 2;
     }
     #esp_section_4 {
